--- a/recipes.html
+++ b/recipes.html
@@ -10,18 +10,24 @@
 <nav>
     <div class="topnav-centered"id="myTopnav">
         <div class="column" id="discover">
-            <a style="font-family:Verdana; color:White; font-size: 20px; display:inline; padding: 4%;" href="index.html" >discover</a>
+            <a href="index.html" >discover</a>
         </div>
         <div class="column" id="explore">
-            <a style="font-family:Verdana; color:White; font-size: 20px;  display:inline; padding: 4%;" href="explore.html" >explore</a>
+            <a href="explore.html" >explore</a>
         </div>
         <div class="column active" id="my-recipes">
-            <a style="font-family:Verdana; color:White; font-size: 20px;  display:inline; padding: 4%; "href="recipes.html">my recipes</a>
+            <a href="recipes.html">my recipes</a>
         </div>
     </div>
 </nav>
 
 <body>
-    
+
+    <div class="my-recipes">
+
+    </div>
+
+    <script src="js/index.js"></script>
+
 </body>
 </html>
